SET(LIB_NAME   ${SIMCOREHLA_LIBRARY})

SET(HEADER_PATH ${SimulationCore_SOURCE_DIR}/include/SimCore/HLA)
SET(SOURCE_PATH ${SimulationCore_SOURCE_DIR}/source/SimCore/HLA)

INCLUDE_DIRECTORIES(${RTIS_INCLUDE_DIR})

file(GLOB LIB_PUBLIC_HEADERS 
    "${HEADER_PATH}/*.h"
    )
file(GLOB LIB_SOURCES 
    "${SOURCE_PATH}/*.cpp")

list(REMOVE_ITEM LIB_SOURCES ${SOURCE_PATH}/HLA/precomp.cpp)

ADD_LIBRARY(${LIB_NAME} SHARED                        
    ${LIB_PUBLIC_HEADERS}                         
    ${LIB_SOURCES}
)

LINK_WITH_VARIABLES(${LIB_NAME}
											  DTHLAGM_LIBRARY
											  DTPHYSX_LIBRARY
											  SIMCORE_LIBRARY
											  )

TARGET_LINK_LIBRARIES(${LIB_NAME} 
${RTIS_NG_LIBRARY}
${RTIS_MEMPOOL_LIBRARY}
${RTIS_13_LIBRARY}
${RTIS_URLREADER_LIBRARY}
${RTIS_BITVECTOR_LIBRARY}
${RTIS_MERSENNE_LIBRARY}
${RTIS_VTERM_LIBRARY}
${RTIS_BUFMGR_LIBRARY}
${RTIS_MSGSTATS_LIBRARY}
${RTIS_RTIFEDTIME_LIBRARY}
${RTIS_XREGEX_LIBRARY}
${RTIS_FEDTIME_LIBRARY}
${RTIS_NETUTIL_LIBRARY}
${RTIS_RTIINTERCEPT_LIBRARY}
${RTIS_Z_LIBRARY}
${RTIS_FEDTIME13_LIBRARY}
${RTIS_PARSER_LIBRARY}
${RTIS_LIBRARY}
${RTIS_IF_LIBRARY}
${RTIS_RID_LIBRARY}
${RTIS_MCAST_LIBRARY}
${RTIS_RTI_LIBRARY}
${RTIS_TIMERS_LIBRARY}
)

SET_TARGET_PROPERTIES(${LIB_NAME}
                        PROPERTIES DEFINE_SYMBOL SIMCORE_HLA_LIBRARY)


INCLUDE(ModuleInstall OPTIONAL)

#little hack to get the .dll into /bin and .lib into /lib
IF (MSVC)
    SET_TARGET_PROPERTIES(${LIB_NAME} PROPERTIES PREFIX "/../../bin/")
    SET_TARGET_PROPERTIES(${LIB_NAME} PROPERTIES IMPORT_PREFIX "../")
ENDIF (MSVC)
