SET(LIB_NAME     ${STEALTHGM_LIBRARY})

SET(HEADER_PATH ${SimulationCore_SOURCE_DIR}/include/StealthViewer/GMApp)
SET(SOURCE_PATH ${SimulationCore_SOURCE_DIR}/source/StealthViewer/GMApp)

INCLUDE_DIRECTORIES(${RTI_INCLUDE_DIR})

file(GLOB LIB_PUBLIC_HEADERS 
   "${HEADER_PATH}/*.h")
file(GLOB LIB_SOURCES 
   "${SOURCE_PATH}/*.cpp")

list(REMOVE_ITEM LIB_SOURCES ${SOURCE_PATH}/precomp.cpp)

ADD_PRECOMPILED_HEADER(${LIB_NAME} prefix/SimCorePrefix.h prefix/SimCorePrefix.cpp LIB_SOURCES)

ADD_LIBRARY(${LIB_NAME} SHARED
    ${LIB_PUBLIC_HEADERS}
    ${LIB_SOURCES}
)

TARGET_LINK_LIBRARIES(${LIB_NAME} 
   ${SIMCORE_LIBRARY}
   ${SIMCOREHLA_LIBRARY}
   ${RTI_LIBRARIES}
)

SET_TARGET_PROPERTIES(${LIB_NAME}
                     PROPERTIES DEFINE_SYMBOL STEALTH_GAME_LIBRARY)

#little hack to get the .dll into /bin and .lib into /lib
IF (MSVC_IDE)
  SET_TARGET_PROPERTIES(${LIB_NAME} PROPERTIES PREFIX "/../../bin/")
  SET_TARGET_PROPERTIES(${LIB_NAME} PROPERTIES IMPORT_PREFIX "../")
ENDIF (MSVC_IDE)

