SET(LIB_NAME   ${SIMCOREHLA_LIBRARY})

SET(HEADER_PATH ${SimulationCore_SOURCE_DIR}/include/SimCore/HLA)
SET(SOURCE_PATH ${SimulationCore_SOURCE_DIR}/source/SimCore/HLA)

file(GLOB LIB_PUBLIC_HEADERS 
    "${HEADER_PATH}/*.h"
    )
file(GLOB LIB_SOURCES 
    "${SOURCE_PATH}/*.cpp")

list(REMOVE_ITEM LIB_SOURCES ${SOURCE_PATH}/HLA/precomp.cpp)

ADD_PRECOMPILED_HEADER(${LIB_NAME} prefix/SimCorePrefix.h prefix/SimCorePrefix.cpp LIB_SOURCES)

ADD_LIBRARY(${LIB_NAME} SHARED
    ${LIB_PUBLIC_HEADERS}
    ${LIB_SOURCES}
)

LINK_WITH_VARIABLES(${LIB_NAME}  
      DTHLAGM_LIBRARY
      DTPHYSX_LIBRARY
      DTNETGM_LIBRARY
)

TARGET_LINK_LIBRARIES(${LIB_NAME} 
${SIMCORE_LIBRARY}
)

IF (BUILD_DIS)
   TARGET_LINK_LIBRARIES(${LIB_NAME} ${DTDIS_LIBRARIES})
   INCLUDE_DIRECTORIES(${DTDIS_INCLUDE_DIRECTORIES})
   SET_TARGET_PROPERTIES(${LIB_NAME} PROPERTIES COMPILE_DEFINITIONS DIS_CONNECTIONS_AVAILABLE=1)
ENDIF (BUILD_DIS)

SET_TARGET_PROPERTIES(${LIB_NAME}
                        PROPERTIES DEFINE_SYMBOL SIMCORE_HLA_LIBRARY)


INCLUDE(ModuleInstall OPTIONAL)

